--- a/packages/storybook-html/src/components/alert/default.html
+++ b/packages/storybook-html/src/components/alert/default.html
@@ -1,30 +1,30 @@
 <div class="alert alert--default" role="alert">
   <div class="alert__message">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--default</strong>.
+    Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--default</strong>.
   </div>
   <a href="javascript:void(0)" class="alert__close">&times;</a>
 </div>
 <div class="alert alert--info" role="alert">
   <div class="alert__message">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--info</strong>.
+    Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--info</strong>.
   </div>
   <a href="javascript:void(0)" class="alert__close">&times;</a>
 </div>
 <div class="alert alert--success" role="alert">
   <div class="alert__message">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--success</strong>.
+    Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--success</strong>.
   </div>
   <a href="javascript:void(0)" class="alert__close">&times;</a>
 </div>
 <div class="alert alert--warning" role="alert">
   <div class="alert__message">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--warning</strong>.
+    Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--warning</strong>.
   </div>
   <a href="javascript:void(0)" class="alert__close">&times;</a>
 </div>
 <div class="alert alert--danger" role="alert">
   <div class="alert__message">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--danger</strong>.
+    Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <strong>--danger</strong>.
   </div>
   <a href="javascript:void(0)" class="alert__close">&times;</a>
 </div>
@@ -36,16 +36,17 @@
     incididunt ut labore et dolore magna aliqua. <strong>This alert has a button action!</strong> Exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
   </div>
   <div class="alert__action">
-    <a href="#" title="Okay" class="button button--white button--no-margin">Okay</a>
+    <a href="#" title="Okay" class="uq-button">Okay</a>
+    <a href="#" title="Okay" class="uq-button uq-button--text">Find out more</a>
   </div>
   <a href="javascript:void(0)" class="alert__close">&times;</a>
 </div>
 <div class="alert alert--warning alert--has-action" role="alert">
   <div class="alert__message">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>I have a --responsive --full-width button!</strong>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>I have an expanded button!</strong>
   </div>
   <div class="alert__action">
-    <a href="#" title="Okay" class="button button--white button--no-margin button--full-width button--responsive">Okay</a>
+    <a href="#" title="Okay" class="uq-button uq-button--expand">Okay</a>
   </div>
   <a href="javascript:void(0)" class="alert__close">&times;</a>
 </div>
@@ -54,10 +55,10 @@
 <div class="alert alert--warning alert--has-action" role="alert">
   <div class="alert__container">
     <div class="alert__message">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>My contents are contained within the principal layout grid. I have a --responsive button!</strong>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>My contents are contained within a fixed content width. I also have a button!</strong>
     </div>
     <div class="alert__action">
-      <a href="#" title="Okay" class="button button--white button--no-margin button--full-width button--responsive">Okay</a>
+      <a href="#" title="Okay" class="uq-button uq-button--secondary uq-button--expand">Okay</a>
     </div>
   </div>
   <a href="javascript:void(0)" class="alert__close">&times;</a>
@@ -65,10 +66,10 @@
 <div class="alert alert--info alert--has-action alert--no-close" role="alert">
   <div class="alert__container">
     <div class="alert__message">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>I have a --responsive button but NO close (&times;).</strong>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>I have a button but NO close (&times;).</strong>
     </div>
     <div class="alert__action">
-      <a href="#" title="Okay" class="button button--white button--no-margin button--full-width button--responsive">Okay</a>
+      <a href="#" title="Okay" class="uq-button uq-button--outline uq-button--expand">Okay</a>
     </div>
   </div>
 </div>
@@ -101,6 +102,17 @@
     <div class="alert alert--danger alert--slim" role="alert">
       <div class="alert__message">
         Lorem ipsum dolor sit amet.
+      </div>
+      <a href="javascript:void(0)" class="alert__close">&times;</a>
+    </div>
+    <br/>
+    <div class="alert alert--info alert--slim alert--has-action" role="alert">
+      <div class="alert__message">
+        Lorem ipsum dolor sit amet.
+      </div>
+      <div class="alert__action">
+        <a href="#" title="Okay" class="uq-button uq-button--small">Activate</a>
+        <a href="#" title="Okay" class="uq-button uq-button--small uq-button--text">Remind me later</a>
       </div>
       <a href="javascript:void(0)" class="alert__close">&times;</a>
     </div>
