--- a/packages/storybook-html/src/components/form/all.html
+++ b/packages/storybook-html/src/components/form/all.html
@@ -1,4 +1,4 @@
-<p><code>&#60;button&#62;</code> <button type="button">Button</button></p>
+<p><code>&#60;button&#62;</code> <button type="button" class="uq-button">Button</button></p>
 
 <p>
   <code>&#60;datalist&#62;</code>
@@ -40,7 +40,7 @@
     <input type="email" name="email" id="email" required />
   </div>
   <div class="form-example">
-    <input type="submit" value="Subscribe!" />
+    <input type="submit" class="uq-button" value="Subscribe!" />
   </div>
 </form>
 
