--- a/packages/storybook-html/src/components/form/examples/password-reset.html
+++ b/packages/storybook-html/src/components/form/examples/password-reset.html
@@ -25,8 +25,8 @@
       <input type="password" name="confirmpassword" id="confirmPassword" class="form__input" aria-describedby="confirmPasswordError" />
       <div id="confirmPasswordError" aria-live="polite"></div>
       <br/>
-      <button type="submit" value="Set password">Save password</button>
-      <button class="button--white" value="Cancel" onclick="document.location.href='/password/cancel'">Cancel</button>
+      <button class="uq-button "type="submit" value="Set password">Save password</button>
+      <button class="uq-button uq-button--text" value="Cancel" onclick="document.location.href='/password/cancel'">Cancel</button>
     </form>
   </div>
 </div>
