--- a/packages/storybook-html/src/components/form/input.html
+++ b/packages/storybook-html/src/components/form/input.html
@@ -1,7 +1,7 @@
 <input type="text" placeholder="Text here..." />
 
 <code>&#60;input type="button"&#62;</code><label>button</label>
-<input type="button" value="Click Me" /> <br />
+<input type="button" class="uq-button" value="Click Me" /> <br />
 <code>&#60;input type="checkbox"&#62;</code> <label>checkbox</label>
 <input type="checkbox" /> <br />
 <code>&#60;input type="color"&#62;</code><label>color</label>
