--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -300,7 +300,8 @@
     <a href="#" class="uq-button uq-button--secondary">Button secondary</a>
     <a href="#" class="uq-button uq-button--outline">Button outline</a>
     <a href="#" class="uq-button uq-button--outline uq-button--secondary">Button outline secondary</a>
-    <a href="#" class="uq-button uq-button--tertiary uq-button--outline">Button tertiary outline</a>
+    <a href="#" class="uq-button uq-button--text">Button text</a>
+    <a href="#" class="uq-button uq-button--text uq-button--secondary">Button text secondary</a>
   </div>
 </div>
 <br/><br/>
