--- a/packages/grid-menu/src/scss/_component.scss
+++ b/packages/grid-menu/src/scss/_component.scss
@@ -1,4 +1,7 @@
-@import "global";
+@use '../../node_modules/@uq-uidf/core/src/scss/_foundation-global' as *;
+@use '../../node_modules/@uq-uidf/core/src/scss/_global' as *;
+@use "global" as *;
+@import "../../node_modules/font-awesome/scss/mixins";
 
 .grid-menu {
   @include block-grid(
