--- a/packages/storybook-html/src/components/body/all.html
+++ b/packages/storybook-html/src/components/body/all.html
@@ -18,7 +18,7 @@
     I am <b>the b tag</b> example<br>
     I am <big>the big tag</big> example<br>
     I am <cite>the cite tag</cite> example<br>
-    I am <code>the code tag</code> example<br>
+    I am <code class="uq-code">the code tag</code> example<br>
     I am <del>the del tag</del> example<br>
     I am <dfn>the dfn tag</dfn> example<br>
     I am <em>the em tag</em> example<br>
@@ -117,7 +117,7 @@
 
 
   <h2>code</h2>
-  <p><code>I'm code</code> and I'm not</p>
+  <p><code class="uq-code">I'm code</code> and I'm not</p>
   <br>
 
 
