--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -1,4 +1,7 @@
-@use './_global.scss' as *;
+@use '../../node_modules/@uq-uidf/core/src/scss/_foundation-global' as *;
+@use '../../node_modules/@uq-uidf/core/src/scss/_global' as *;
+@use 'global' as *;
+@import "../../node_modules/@uq-uidf/core/src/fonts/uq-icons/scss/mixins";
 
 // Accordion / Toggle style
 //
