--- a/packages/button/src/scss/_global.scss
+++ b/packages/button/src/scss/_global.scss
@@ -1,6 +1,7 @@
 // Variables, functions, and mixins
 
-@use "~@uq-uidf/core/src/scss/_global.scss" as *;
+@use '../../node_modules/@uq-uidf/core/src/scss/_foundation-global' as *;
+@use '../../node_modules/@uq-uidf/core/src/scss/_global' as *;
 
 $button-font: $roboto;
 
