--- a/packages/footer-classic/src/scss/_global.scss
+++ b/packages/footer-classic/src/scss/_global.scss
@@ -1,6 +1,6 @@
 // Variables, functions, and mixins
 
-@import "~@uq-uidf/core/src/scss/_global.scss";
+@use "../../node_modules/@uq-uidf/core/src/scss/_global" as *;
 
 $site-footer-bg: $uq-dark-purple;
 $site-footer-color: mix(white, $uq-dark-purple, 75%);
