--- a/packages/header-classic/src/scss/_component.scss
+++ b/packages/header-classic/src/scss/_component.scss
@@ -1,4 +1,6 @@
-@import '_global.scss';
+@use '../../node_modules/@uq-uidf/core/src/scss/_foundation-global' as *;
+@use '../../node_modules/@uq-uidf/core/src/scss/_global' as *;
+@use 'global' as *;
 
 // Global UQ site header
 //
@@ -151,7 +153,7 @@
   float: right;
 
   &__list {
-    @include inline-list();
+    @include compass-inline-list();
   }
 
   //&__item {}
