--- a/packages/header-classic/src/scss/_global.scss
+++ b/packages/header-classic/src/scss/_global.scss
@@ -1,6 +1,6 @@
 // Variables, functions, and mixins
 
-@import "~@uq-uidf/core/src/scss/_global.scss";
+@use "../../node_modules/@uq-uidf/core/src/scss/global" as *;
 
 $site-header-bg: $uq-dark-purple;
 $site-header-color: #fff;
