--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -1,5 +1,9 @@
-@import "~@uq-uidf/core/src/scss/_component";
-@import "~@uq-uidf/body/src/scss/_component";
+@use "~@uq-uidf/core/src/scss/_component" as * with (
+  $uq-font-path: "~@uq-uidf/core/src/fonts/uq-icons/font",
+  $fa-font-path: "~font-awesome/fonts",
+  $uq-bg-image-path: '~@uq-uidf/core/src/images'
+);
+@use "~@uq-uidf/body/src/scss/_component" as *;
 
 // Prevent the @uq-uidf/core from imposing a background colour. Overrides the
 // Foundation 5.5.3 default styling of the body tag.
