storybook-html: update form validation stories

--- a/packages/storybook-html/src/components/form/examples/password-reset.html
+++ b/packages/storybook-html/src/components/form/examples/password-reset.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="column small-6">
+  <div class="column medium-6">
     <h1>Choose a new password</h1>
     <div id="errorSummary" role="alert">
       <!-- error summary contents will be populated here -->
