--- a/packages/form/src/scss/_component.scss
+++ b/packages/form/src/scss/_component.scss
@@ -503,8 +503,9 @@ select[multiple='multiple'] {
     color: $body-font-color;
     font-size: .875rem;
     margin: 0;
-    &-item {
+    &__item {
       margin-bottom: .4rem;
+      line-height: 1.5;
     }
     a {
       color: $alert;
