xmp not code renders well to display icon script.

--- a/packages/storybook-html/src/components/icon/icon.html
+++ b/packages/storybook-html/src/components/icon/icon.html
@@ -1,6 +1,6 @@
 <h3>Basic</h3>
 <ol>
-  <li><code><span class="uq-icon uq-icon--common--close"></span></code> <span class="uq-icon uq-icon--common--close"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--common--close"></span></xmp> <span class="uq-icon uq-icon--common--close"></span></li>
 </ol>
 
 <h3>Color Variants</h3>
