storybook-html: centre all stories by default

--- a/packages/storybook-html/.storybook/preview.scss
+++ b/packages/storybook-html/.storybook/preview.scss
@@ -10,3 +10,12 @@
 body {
   background-color: transparent !important;
 }
+
+// For centerStory decorator
+.story--centered {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
