--- a/packages/footer/src/scss/_global.scss
+++ b/packages/footer/src/scss/_global.scss
@@ -3,4 +3,4 @@
 // Variables, functions, and mixins
 $site-footer-color: mix(white, $uq-purple, 75%);
 $site-footer-link-color: #fff;
-$site-footer-font-size: 0.875rem;
+$site-footer-font-size: .875rem;
