--- a/packages/storybook-html/src/components/icon/icon.html
+++ b/packages/storybook-html/src/components/icon/icon.html
@@ -1,13 +1,13 @@
 <h3>Basic</h3>
 <ol>
-  <li><xmp><span class="uq-icon uq-icon--close"></span></xmp> <span class="uq-icon uq-icon--close"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--search"></span></xmp> <span class="uq-icon uq-icon--search"></span></li>
 </ol>
 
 <h3>Color Variants</h3>
 <ol>
-  <li><xmp><span class="uq-icon uq-icon--close uq-icon--light"></span></xmp> <span class="uq-icon uq-icon--close uq-icon--light"></span></li>
-  <li><xmp><span class="uq-icon uq-icon--close uq-icon--dark"></span></xmp> <span class="uq-icon uq-icon--close uq-icon--dark"></span></li>
-  <li><xmp><span class="uq-icon uq-icon--close uq-icon--blue"></span></xmp> <span class="uq-icon uq-icon--close uq-icon--blue"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--search uq-icon--light"></span></xmp> <span class="uq-icon uq-icon--search uq-icon--light"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--search uq-icon--dark"></span></xmp> <span class="uq-icon uq-icon--search uq-icon--dark"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--search uq-icon--blue"></span></xmp> <span class="uq-icon uq-icon--search uq-icon--blue"></span></li>
 </ol>
 
 <h3>Icon Lists</h3>
@@ -60,20 +60,6 @@
   <li><xmp><span class="uq-icon uq-icon--video-player-movie-1"></span></xmp> <span class="uq-icon uq-icon--video-player-movie-1"></span></li>
 </ol>
 
-<h5>Common</h5>
-<ol>
-  <li><xmp><span class="uq-icon uq-icon--calendar"></span></xmp> <span class="uq-icon uq-icon--calendar"></span></li>
-  <li><xmp><span class="uq-icon uq-icon--chevron-down"></span></xmp> <span class="uq-icon uq-icon--chevron-down"></span></li>
-  <li><xmp><span class="uq-icon uq-icon--chevron-left"></span></xmp> <span class="uq-icon uq-icon--chevron-left"></span></li>
-  <li><xmp><span class="uq-icon uq-icon--chevron-right"></span></xmp> <span class="uq-icon uq-icon--chevron-right"></span></li>
-  <li><xmp><span class="uq-icon uq-icon--chevron-up"></span></xmp> <span class="uq-icon uq-icon--chevron-up"></span></li>
-  <li><xmp><span class="uq-icon uq-icon--clock"></span></xmp> <span class="uq-icon uq-icon--clock"></span></li>
-  <li><xmp><span class="uq-icon uq-icon--close"></span></xmp> <span class="uq-icon uq-icon--close"></span></li>
-  <li><xmp><span class="uq-icon uq-icon--menu"></span></xmp> <span class="uq-icon uq-icon--menu"></span></li>
-  <li><xmp><span class="uq-icon uq-icon--pin"></span></xmp> <span class="uq-icon uq-icon--pin"></span></li>
-  <li><xmp><span class="uq-icon uq-icon--search"></span></xmp> <span class="uq-icon uq-icon--search"></span></li>
-</ol>
-
 <h5>Business and Economics</h5>
 <ol>
   <li><xmp><span class="uq-icon uq-icon--accounting-calculator"></span></xmp> <span class="uq-icon uq-icon--accounting-calculator"></span></li>
@@ -87,6 +73,20 @@
   <li><xmp><span class="uq-icon uq-icon--performance-increase-1"></span></xmp> <span class="uq-icon uq-icon--performance-increase-1"></span></li>
   <li><xmp><span class="uq-icon uq-icon--performance-user-graph"></span></xmp> <span class="uq-icon uq-icon--performance-user-graph"></span></li>
   <li><xmp><span class="uq-icon uq-icon--travel-crossroad-direction-board"></span></xmp> <span class="uq-icon uq-icon--travel-crossroad-direction-board"></span></li>
+</ol>
+
+<h5>Common</h5>
+<ol>
+  <li><xmp><span class="uq-icon uq-icon--calendar"></span></xmp> <span class="uq-icon uq-icon--calendar"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--chevron-down"></span></xmp> <span class="uq-icon uq-icon--chevron-down"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--chevron-left"></span></xmp> <span class="uq-icon uq-icon--chevron-left"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--chevron-right"></span></xmp> <span class="uq-icon uq-icon--chevron-right"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--chevron-up"></span></xmp> <span class="uq-icon uq-icon--chevron-up"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--clock"></span></xmp> <span class="uq-icon uq-icon--clock"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--close"></span></xmp> <span class="uq-icon uq-icon--close"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--menu"></span></xmp> <span class="uq-icon uq-icon--menu"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--pin"></span></xmp> <span class="uq-icon uq-icon--pin"></span></li>
+  <li><xmp><span class="uq-icon uq-icon--search"></span></xmp> <span class="uq-icon uq-icon--search"></span></li>
 </ol>
 
 <h5>Education</h5>
