--- a/packages/icon/src/scss/__xcomponent.scss
+++ b/packages/icon/src/scss/__xcomponent.scss
@@ -1,9 +1,8 @@
 @use './_global.scss' as *;
-@use './_icons.scss' as *;
 
 .uq-icon {
-  width: 1.5em;
-  height: 1.5em;
+  width: 1em;
+  height: 1em;
   stroke: currentColor;
   fill: currentColor;
   vertical-align: text-top;
@@ -13,67 +12,31 @@
   line-height: 100%;
 }
 
-$data-svg-prefix:'data:image/svg+xml;utf-8,';
-
-
-/* Function to replace a string with something else */ 
-@function str-replace( $string, $search, $replace: '' ) {
-
-    $index: str-index( $string, $search );
-    @if $index {
-      @return str-slice( $string, 1, $index - 1 ) + $replace + str-replace( str-slice( $string, $index + str-length( $search ) ), $search, $replace);
-    }
-    @return $string;
-}
-
-
-/* Function to get the data url of the svg icon and add color (by default #222) */ 
-@function get-icon( $icon, $color: #222 ) {
-
-  @if 'color' != type-of( $color ) {
-    @warn 'The requested color - "' + $color + '" - was not recognized as a Sass color value.';
-    @return null;
-  }
-
-  @if map-has-key( $icons, $icon ) {
-    $icon: map-get( $icons, $icon );
-    $placeholder: '%%COLOR%%';
-    //$data-uri: str-replace( url( $data-svg-prefix + $icon ), $placeholder, $color );
-    $data-uri: str-replace( $icon, $placeholder, $color );
-    @return str-replace( $data-uri, '#', '%23' );
-  }
-
-  @warn 'The requested icon - "' + $icon + '" - is not defined in the $icons map.';
-  @return null;
-}
-
-
-/* Mixer Function ('folder_name', 'icon_name') */
 @mixin icon($category, $name) {
-
   .uq-icon--#{$name} {
-    background: url( $data-svg-prefix + get-icon( #{$name} ) ) no-repeat;
-
-    &.uq-icon--light {
-      background: url( $data-svg-prefix + get-icon( #{$name}, $icon-white ) ) no-repeat;
-    }
-    &.uq-icon--#{$name}.uq-icon--dark {
-      background: url( $data-svg-prefix + get-icon( #{$name}, $icon-black ) ) no-repeat;
-    }
-    &.uq-icon--#{$name}.uq-icon--blue {
-      background: url( $data-svg-prefix + get-icon( #{$name}, $icon-blue ) ) no-repeat;
-
-      &:hover {
-        background: url( $data-svg-prefix + get-icon( #{$name}, $icon-blue-dark ) ) no-repeat;
-      }
-    }
+    background: url("~@uq-uidf/icon/src/images/" + $category + "/" + $name + ".svg") no-repeat;
+  }
+  .uq-icon--#{$name}.uq-icon--light {
+    background: url("~@uq-uidf/icon/src/images/" + $category + "/" + $name + ".svg?fill=$icon-white") no-repeat;
+  }
+  .uq-icon--#{$name}.uq-icon--dark {
+    background: url("~@uq-uidf/icon/src/images/" + $category + "/" + $name + ".svg?fill=$icon-black") no-repeat;
+  }
+  .uq-icon--#{$name}.uq-icon--blue {
+    background: url("~@uq-uidf/icon/src/images/" + $category + "/" + $name + ".svg?fill=$icon-blue") no-repeat;
   }
 }
 
-
-/* Mixer Includes ('folder_name', 'icon_name') */
-// Change below as required when svg icons are added, deleted or changed 
-
+@include icon('common', 'calendar');
+@include icon('common', 'chevron-down');
+@include icon('common', 'chevron-left');
+@include icon('common', 'chevron-right');
+@include icon('common', 'chevron-up');
+@include icon('common', 'clock');
+@include icon('common', 'close');
+@include icon('common', 'menu');
+@include icon('common', 'pin');
+@include icon('common', 'search');
 @include icon('agriculture-and-environment', 'agriculture-machine-harvester-1');
 @include icon('agriculture-and-environment', 'agriculture-machine-plow-2');
 @include icon('agriculture-and-environment', 'agriculture-machine-tractor');
@@ -122,16 +85,6 @@ $data-svg-prefix:'data:image/svg+xml;utf-8,';
 @include icon('business-and-economics', 'performance-increase-1');
 @include icon('business-and-economics', 'performance-user-graph');
 @include icon('business-and-economics', 'travel-crossroad-direction-board');
-@include icon('common', 'calendar');
-@include icon('common', 'chevron-down');
-@include icon('common', 'chevron-left');
-@include icon('common', 'chevron-right');
-@include icon('common', 'chevron-up');
-@include icon('common', 'clock');
-@include icon('common', 'close');
-@include icon('common', 'menu');
-@include icon('common', 'pin');
-@include icon('common', 'search');
 @include icon('education', 'basketball-ball');
 @include icon('education', 'bookmarks-document');
 @include icon('education', 'family-hold');
