--- a/packages/pagination/src/scss/_global.scss
+++ b/packages/pagination/src/scss/_global.scss
@@ -1,1 +1,2 @@
-// Documentation (re: dependencies, version), variables, and mixins go here... for each component
+// Variables, functions, and mixins
+@import "~@uq-uidf/core/src/scss/_global.scss";
