--- a/packages/storybook-html/src/components/pagination/pagination.html
+++ b/packages/storybook-html/src/components/pagination/pagination.html
@@ -1,15 +1,43 @@
+<section class="text-center">
 <ul class="pagination">
-    <li class="pagination__item pagination__item--first"><a title="Go to first page" href="#">first »</a></li>
-    <li class="pagination__item pagination__item--prev"><a title="Go to prev page" href="#">‹ prev</a></li>
-    <li class="pagination__ellipsis">…</li>
-    <li class="pagination__item pagination__item--first"><a title="Go to page 1" href="#">1</a></li>
-    <li class="pagination__item pagination__item--current"><a title="Go to page 2" href="#">2</a></li>
+    <li class="pagination__item pagination__item--first pagination__item--current"><a title="Go to page 1" href="#">1</a></li>
+    <li class="pagination__item"><a title="Go to page 2" href="#">2</a></li>
     <li class="pagination__item"><a title="Go to page 3" href="#">3</a></li>
     <li class="pagination__item"><a title="Go to page 4" href="#">4</a></li>
     <li class="pagination__item"><a title="Go to page 5" href="#">5</a></li>
     <li class="pagination__item"><a title="Go to page 6" href="#">6</a></li>
     <li class="pagination__item"><a title="Go to page 7" href="#">7</a></li>
     <li class="pagination__ellipsis">…</li>
-    <li class="pagination__item pagination__item--next"><a title="Go to next page" href="#">next ›</a></li>
-    <li class="pagination__item pagination__item--last"><a title="Go to last page" href="#">last »</a></li>
+    <li class="pagination__item pagination__item--next"><a title="Go to next page" href="#">next &rsaquo;</a></li>
+    <li class="pagination__item pagination__item--last"><a title="Go to last page" href="#">last &raquo;</a></li>
 </ul>
+
+<ul class="pagination">
+    <li class="pagination__item pagination__item--first"><a title="Go to first page" href="#">&laquo; first</a></li>
+    <li class="pagination__item pagination__item--prev"><a title="Go to prev page" href="#">&lsaquo; prev</a></li>
+    <li class="pagination__ellipsis">…</li>
+    <li class="pagination__item"><a title="Go to page 8" href="#">8</a></li>
+    <li class="pagination__item"><a title="Go to page 9" href="#">9</a></li>
+    <li class="pagination__item"><a title="Go to page 10" href="#">10</a></li>
+    <li class="pagination__item pagination__item--current"><a title="Go to page 11" href="#">11</a></li>
+    <li class="pagination__item"><a title="Go to page 12" href="#">12</a></li>
+    <li class="pagination__item"><a title="Go to page 13" href="#">13</a></li>
+    <li class="pagination__item"><a title="Go to page 14" href="#">14</a></li>
+    <li class="pagination__ellipsis">…</li>
+    <li class="pagination__item pagination__item--next"><a title="Go to next page" href="#">next &rsaquo;</a></li>
+    <li class="pagination__item pagination__item--last"><a title="Go to last page" href="#">last &raquo;</a></li>
+</ul>
+
+<ul class="pagination">
+    <li class="pagination__item pagination__item--first"><a title="Go to first page" href="#">&laquo; first</a></li>
+    <li class="pagination__item pagination__item--prev"><a title="Go to prev page" href="#">&lsaquo; prev</a></li>
+    <li class="pagination__ellipsis">…</li>
+    <li class="pagination__item"><a title="Go to page 15" href="#">15</a></li>
+    <li class="pagination__item"><a title="Go to page 16" href="#">16</a></li>
+    <li class="pagination__item"><a title="Go to page 17" href="#">17</a></li>
+    <li class="pagination__item"><a title="Go to page 18" href="#">18</a></li>
+    <li class="pagination__item"><a title="Go to page 19" href="#">19</a></li>
+    <li class="pagination__item"><a title="Go to page 20" href="#">20</a></li>
+    <li class="pagination__item pagination__item--last pagination__item--current"><a title="Go to page 21" href="#">21</a></li>
+</ul>
+</section>
