Doc updates + rename html files

--- a/packages/storybook-html/src/components/pagination/pagination-last.html
+++ b/packages/storybook-html/src/components/pagination/pagination-last.html
@@ -1,9 +1,12 @@
-<p><code>&#60;ul class="pagination"&#62; <br> 
-    ....&#60;li class="pagination__item pagination__item--last pagination__item--current"&#62;&#60;a title="Go to page 21" href="#"&#62;21&#60;/a&#62;&#60;/li&#62;....<br> &#60;/ul&#62;</code></p>
+<p><code>
+    &#60;ul class="pagination"&#62; <br>
+        .... &#60;li class="pagination__item pagination__item--last pagination__item--current"&#62;&#60;a title="Go to page 21" href="#"&#62;21&#60;/a&#62;&#60;/li&#62; .... <br>
+    &#60;/ul&#62;
+</code></p>
 <ul class="pagination">
-    <li class="pagination__item pagination__item--first"><a title="Go to first page" href="#">&laquo; first</a></li>
-    <li class="pagination__item pagination__item--prev"><a title="Go to prev page" href="#">&lsaquo; prev</a></li>
-    <li class="pagination__ellipsis">…</li>
+    <li class="pagination__item pagination__item--go-first"><a title="Go to first page" href="#">&laquo; first</a></li>
+    <li class="pagination__item pagination__item--go-previous"><a title="Go to prev page" href="#">&lsaquo; prev</a></li>
+    <li class="pagination__ellipsis pagination__ellipsis--left">…</li>
     <li class="pagination__item"><a title="Go to page 15" href="#">15</a></li>
     <li class="pagination__item"><a title="Go to page 16" href="#">16</a></li>
     <li class="pagination__item"><a title="Go to page 17" href="#">17</a></li>
