--- a/packages/storybook-html/src/components/pagination/pagination.html
+++ b/packages/storybook-html/src/components/pagination/pagination.html
@@ -7,15 +7,15 @@
     <li class="pagination__item"><a title="Go to page 5" href="#">5</a></li>
     <li class="pagination__item"><a title="Go to page 6" href="#">6</a></li>
     <li class="pagination__item"><a title="Go to page 7" href="#">7</a></li>
-    <li class="pagination__ellipsis">…</li>
-    <li class="pagination__item pagination__item--next"><a title="Go to next page" href="#">next &rsaquo;</a></li>
-    <li class="pagination__item pagination__item--last"><a title="Go to last page" href="#">last &raquo;</a></li>
+    <li class="pagination__ellipsis pagination__ellipsis--right">…</li>
+    <li class="pagination__item pagination__item--go-next"><a title="Go to next page" href="#">next &rsaquo;</a></li>
+    <li class="pagination__item pagination__item--go-last"><a title="Go to last page" href="#">last &raquo;</a></li>
 </ul>
 
 <ul class="pagination">
-    <li class="pagination__item pagination__item--first"><a title="Go to first page" href="#">&laquo; first</a></li>
-    <li class="pagination__item pagination__item--prev"><a title="Go to prev page" href="#">&lsaquo; prev</a></li>
-    <li class="pagination__ellipsis">…</li>
+    <li class="pagination__item pagination__item--go-first"><a title="Go to first page" href="#">&laquo; first</a></li>
+    <li class="pagination__item pagination__item--go-previous"><a title="Go to prev page" href="#">&lsaquo; prev</a></li>
+    <li class="pagination__ellipsis pagination__ellipsis--left">…</li>
     <li class="pagination__item"><a title="Go to page 8" href="#">8</a></li>
     <li class="pagination__item"><a title="Go to page 9" href="#">9</a></li>
     <li class="pagination__item"><a title="Go to page 10" href="#">10</a></li>
@@ -23,15 +23,15 @@
     <li class="pagination__item"><a title="Go to page 12" href="#">12</a></li>
     <li class="pagination__item"><a title="Go to page 13" href="#">13</a></li>
     <li class="pagination__item"><a title="Go to page 14" href="#">14</a></li>
-    <li class="pagination__ellipsis">…</li>
-    <li class="pagination__item pagination__item--next"><a title="Go to next page" href="#">next &rsaquo;</a></li>
-    <li class="pagination__item pagination__item--last"><a title="Go to last page" href="#">last &raquo;</a></li>
+    <li class="pagination__ellipsis pagination__ellipsis--right">…</li>
+    <li class="pagination__item pagination__item--go-next"><a title="Go to next page" href="#">next &rsaquo;</a></li>
+    <li class="pagination__item pagination__item--go-last"><a title="Go to last page" href="#">last &raquo;</a></li>
 </ul>
 
 <ul class="pagination">
-    <li class="pagination__item pagination__item--first"><a title="Go to first page" href="#">&laquo; first</a></li>
-    <li class="pagination__item pagination__item--prev"><a title="Go to prev page" href="#">&lsaquo; prev</a></li>
-    <li class="pagination__ellipsis">…</li>
+    <li class="pagination__item pagination__item--go-first"><a title="Go to first page" href="#">&laquo; first</a></li>
+    <li class="pagination__item pagination__item--go-previous"><a title="Go to prev page" href="#">&lsaquo; prev</a></li>
+    <li class="pagination__ellipsis pagination__ellipsis--left">…</li>
     <li class="pagination__item"><a title="Go to page 15" href="#">15</a></li>
     <li class="pagination__item"><a title="Go to page 16" href="#">16</a></li>
     <li class="pagination__item"><a title="Go to page 17" href="#">17</a></li>
