--- a/packages/storybook-html/src/components/pagination/pagination-first.html
+++ b/packages/storybook-html/src/components/pagination/pagination-first.html
@@ -4,14 +4,14 @@
     &#60;/ul&#62;
 </code></p>
 <ul class="pagination">
-    <li class="pagination__item pagination__item--first pagination__item--current"><a title="Go to page 1" href="#">1</a></li>
-    <li class="pagination__item"><a title="Go to page 2" href="#">2</a></li>
-    <li class="pagination__item"><a title="Go to page 3" href="#">3</a></li>
-    <li class="pagination__item"><a title="Go to page 4" href="#">4</a></li>
-    <li class="pagination__item"><a title="Go to page 5" href="#">5</a></li>
-    <li class="pagination__item"><a title="Go to page 6" href="#">6</a></li>
-    <li class="pagination__item"><a title="Go to page 7" href="#">7</a></li>
+    <li class="pagination__item pagination__item--first pagination__item--current"><a class="pagination__link" title="Go to page 1" href="#">1</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 2" href="#">2</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 3" href="#">3</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 4" href="#">4</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 5" href="#">5</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 6" href="#">6</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 7" href="#">7</a></li>
     <li class="pagination__ellipsis pagination__ellipsis--right">…</li>
-    <li class="pagination__item pagination__item--go-next"><a title="Go to next page" href="#">next &rsaquo;</a></li>
-    <li class="pagination__item pagination__item--go-last"><a title="Go to last page" href="#">last &raquo;</a></li>
+    <li class="pagination__item pagination__item--go-next"><a class="pagination__link" title="Go to next page" href="#">next &rsaquo;</a></li>
+    <li class="pagination__item pagination__item--go-last"><a class="pagination__link" title="Go to last page" href="#">last &raquo;</a></li>
 </ul>
