--- a/packages/storybook-html/src/components/pagination/pagination-last.html
+++ b/packages/storybook-html/src/components/pagination/pagination-last.html
@@ -4,14 +4,14 @@
     &#60;/ul&#62;
 </code></p>
 <ul class="pagination">
-    <li class="pagination__item pagination__item--go-first"><a title="Go to first page" href="#">&laquo; first</a></li>
-    <li class="pagination__item pagination__item--go-previous"><a title="Go to prev page" href="#">&lsaquo; prev</a></li>
+    <li class="pagination__item pagination__item--go-first"><a class="pagination__link" title="Go to first page" href="#">&laquo; first</a></li>
+    <li class="pagination__item pagination__item--go-previous"><a class="pagination__link" title="Go to prev page" href="#">&lsaquo; prev</a></li>
     <li class="pagination__ellipsis pagination__ellipsis--left">…</li>
-    <li class="pagination__item"><a title="Go to page 15" href="#">15</a></li>
-    <li class="pagination__item"><a title="Go to page 16" href="#">16</a></li>
-    <li class="pagination__item"><a title="Go to page 17" href="#">17</a></li>
-    <li class="pagination__item"><a title="Go to page 18" href="#">18</a></li>
-    <li class="pagination__item"><a title="Go to page 19" href="#">19</a></li>
-    <li class="pagination__item"><a title="Go to page 20" href="#">20</a></li>
-    <li class="pagination__item pagination__item--last pagination__item--current"><a title="Go to page 21" href="#">21</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 15" href="#">15</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 16" href="#">16</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 17" href="#">17</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 18" href="#">18</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 19" href="#">19</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 20" href="#">20</a></li>
+    <li class="pagination__item pagination__item--last pagination__item--current"><a class="pagination__link" title="Go to page 21" href="#">21</a></li>
 </ul>
