--- a/packages/storybook-html/src/components/pagination/pagination-middle.html
+++ b/packages/storybook-html/src/components/pagination/pagination-middle.html
@@ -4,17 +4,17 @@
 </code></p>
 
 <ul class="pagination">
-    <li class="pagination__item pagination__item--go-first"><a title="Go to first page" href="#">&laquo; first</a></li>
-    <li class="pagination__item pagination__item--go-previous"><a title="Go to prev page" href="#">&lsaquo; prev</a></li>
+    <li class="pagination__item pagination__item--go-first"><a class="pagination__link" title="Go to first page" href="#">&laquo; first</a></li>
+    <li class="pagination__item pagination__item--go-previous"><a class="pagination__link" title="Go to prev page" href="#">&lsaquo; prev</a></li>
     <li class="pagination__ellipsis pagination__ellipsis--left">…</li>
-    <li class="pagination__item"><a title="Go to page 8" href="#">8</a></li>
-    <li class="pagination__item"><a title="Go to page 9" href="#">9</a></li>
-    <li class="pagination__item"><a title="Go to page 10" href="#">10</a></li>
-    <li class="pagination__item pagination__item--current"><a title="Go to page 11" href="#">11</a></li>
-    <li class="pagination__item"><a title="Go to page 12" href="#">12</a></li>
-    <li class="pagination__item"><a title="Go to page 13" href="#">13</a></li>
-    <li class="pagination__item"><a title="Go to page 14" href="#">14</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 8" href="#">8</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 9" href="#">9</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 10" href="#">10</a></li>
+    <li class="pagination__item pagination__item--current"><a class="pagination__link" title="Go to page 11" href="#">11</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 12" href="#">12</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 13" href="#">13</a></li>
+    <li class="pagination__item"><a class="pagination__link" title="Go to page 14" href="#">14</a></li>
     <li class="pagination__ellipsis pagination__ellipsis--right">…</li>
-    <li class="pagination__item pagination__item--go-next"><a title="Go to next page" href="#">next &rsaquo;</a></li>
-    <li class="pagination__item pagination__item--go-last"><a title="Go to last page" href="#">last &raquo;</a></li>
+    <li class="pagination__item pagination__item--go-next"><a class="pagination__link" title="Go to next page" href="#">next &rsaquo;</a></li>
+    <li class="pagination__item pagination__item--go-last"><a class="pagination__link" title="Go to last page" href="#">last &raquo;</a></li>
 </ul>
