Docs.mdx added + Doc amends + Readme file

--- a/packages/storybook-html/src/components/pagination/pagination-last.html
+++ b/packages/storybook-html/src/components/pagination/pagination-last.html
@@ -5,7 +5,7 @@
 </code></p>
 <ul class="pagination">
     <li class="pagination__item pagination__item--go-first"><a class="pagination__link" title="Go to first page" href="#">&laquo; first</a></li>
-    <li class="pagination__item pagination__item--go-previous"><a class="pagination__link" title="Go to prev page" href="#">&lsaquo; prev</a></li>
+    <li class="pagination__item pagination__item--go-previous"><a class="pagination__link" title="Go to previous page" href="#">&lsaquo; prev</a></li>
     <li class="pagination__ellipsis pagination__ellipsis--left">…</li>
     <li class="pagination__item"><a class="pagination__link" title="Go to page 15" href="#">15</a></li>
     <li class="pagination__item"><a class="pagination__link" title="Go to page 16" href="#">16</a></li>
