--- a/packages/storybook-html/src/components/pagination/pagination-middle.html
+++ b/packages/storybook-html/src/components/pagination/pagination-middle.html
@@ -5,7 +5,7 @@
 
 <ul class="pagination">
     <li class="pagination__item pagination__item--go-first"><a class="pagination__link" title="Go to first page" href="#">&laquo; first</a></li>
-    <li class="pagination__item pagination__item--go-previous"><a class="pagination__link" title="Go to prev page" href="#">&lsaquo; prev</a></li>
+    <li class="pagination__item pagination__item--go-previous"><a class="pagination__link" title="Go to previous page" href="#">&lsaquo; prev</a></li>
     <li class="pagination__ellipsis pagination__ellipsis--left">…</li>
     <li class="pagination__item"><a class="pagination__link" title="Go to page 8" href="#">8</a></li>
     <li class="pagination__item"><a class="pagination__link" title="Go to page 9" href="#">9</a></li>
