--- a/packages/pagination/src/scss/_component.scss
+++ b/packages/pagination/src/scss/_component.scss
@@ -12,7 +12,7 @@
 			color: $link-color;
 			font-size: 1rem;
 			font-weight: 300;
-			padding: 0px 8px;
+			padding: 0 8px;
 			text-decoration: none;
 
 			&:hover {
